# weather-bench-gcp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Snakefile  config.json  contribution_conventions.md  index.html  index.json  init_project.py  myst.search.json  myst.xref.json  notebooks.analyse-results.json  objects.inv  pyproject.toml  sitemap.xml
book/: myst.yml
book/notebooks/: 05_analyse_results.ipynb
configs/: bavaria_dev.yaml  europe_2022_v1.yaml
notebooks/analyse-results/: index.html
pipeline/: 01_download_example.py  01_extract_observations.py  02_analyse_example.py  02_extract_climatology.py  03_extract_forecast.py  04_evaluate.py  05_analyse_results.py
pkg/: paths.py
wbgcp/: config.py  metadata.py  paths.py
