[project]
name = "weather-bench-gcp"
version = "0.1.0"
description = "Research project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # pipeline infrastructure
    "ipykernel>=6.29.0",
    "jupytext>=1.19.0",
    "nbconvert>=7.0.0",
    "mystmd>=1.8.0",
    "nbformat>=5.10.0",
    "snakemake>=8.0.0",
    # data access
    "gcsfs>=2024.6.0",
    "zarr>=2.18.0,<3.0.0",
    "xarray>=2024.6.0",
    # analysis
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scipy>=1.13.0",
    # config
    "pyyaml>=6.0.0",
    "weatherbench2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wbgcp"]

[tool.uv.sources]
weatherbench2 = { git = "https://github.com/google-research/weatherbench2.git" }
